MID-9360 - Fixed bad alignment for custom panels if custom icons are used

--- a/gui/admin-gui/src/frontend/scss/details-menu.scss
+++ b/gui/admin-gui/src/frontend/scss/details-menu.scss
@@ -23,7 +23,9 @@
   & a > div > i.fas,
   a > div > i.far,
   a > div > i.fa,
-  a > div > i.fe {
+  a > div > i.fe,
+  a > div > i.fa-solid,
+  a > div > i.fa-regular {
     min-width: 24px;
     text-align: center;
   }
